workloads/smallstep/manifest/kube-apiserver-client-ca.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-apiserver-client-ca
  labels:
    app.kubernetes.io/name: smallstep
    app.kubernetes.io/component: kube-apiserver-client-ca
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: smallstep
      app.kubernetes.io/component: kube-apiserver-client-ca
  ingress:
  - toPorts:
    - ports:
      - port: "9000"
    fromEntities:
    - all
---
apiVersion: v1
kind: Service
metadata:
  name: kube-apiserver-client-ca-external
  labels:
    app.kubernetes.io/name: smallstep
    app.kubernetes.io/component: kube-apiserver-client-ca
  annotations:
    io.cilium/lb-ipam-ips: "cluster.kubeAPIServerCA.fixedIPv4,cluster.kubeAPIServerCA.fixedIPv6"
    external-dns.alpha.kubernetes.io/hostname: pki-kube.DOMAIN.
spec:
  type: LoadBalancer
  ipFamilies: [IPv4, IPv6]
  ipFamilyPolicy: RequireDualStack
  selector:
    app.kubernetes.io/name: smallstep
    app.kubernetes.io/component: kube-apiserver-client-ca
  ports:
  - name: api
    port: 9001
    targetPort: api
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kube-apiserver-client-ca
  labels:
    app.kubernetes.io/name: smallstep
    app.kubernetes.io/component: kube-apiserver-client-ca
spec:
  serviceName: kube-apiserver-client-ca
  selector:
    matchLabels:
      app.kubernetes.io/name: smallstep
      app.kubernetes.io/component: kube-apiserver-client-ca
  template:
    metadata:
      labels:
        app.kubernetes.io/name: smallstep
        app.kubernetes.io/component: kube-apiserver-client-ca
        cluster.local/allow-internet-egress: "true"
    spec:
      nodeSelector:
        kubernetes.io/hostname: machines.k8sMaster.hostname
      containers:
      - name: step-certificates
        image: cr.step.sm/smallstep/step-ca:0.26.1
        command: [/usr/local/bin/step-ca]
        args: [/home/step/config/ca.json]
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: api
          containerPort: 9000
        livenessProbe:
          httpGet:
            path: /health
            port: api
            scheme: HTTPS
          initialDelaySeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: api
            scheme: HTTPS
          initialDelaySeconds: 5
        volumeMounts:
        - name: certs
          mountPath: /home/step/certs
          readOnly: true
        - name: config-rw
          mountPath: /home/step/config
        - name: database
          mountPath: /home/step/db
          readOnly: false
      volumes:
      - name: home-cluster
        nfs:
          server: nfsShares.homeCluster.addr
          path: nfsShares.homeCluster.path
          readOnly: true
      - name: certs
        emptyDir:
          medium: Memory
      - name: kube-apiserver-client-ca-cert
        hostPath:
          path: /var/lib/persistent/lib-rancher/k3s/server/tls/client-ca.crt
          type: File
      - name: kube-apiserver-client-ca-key
        hostPath:
          path: /var/lib/persistent/lib-rancher/k3s/server/tls/client-ca.key
          type: File
      - name: config-rw
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: database
      labels:
        app.kubernetes.io/name: smallstep
        app.kubernetes.io/component: kube-apiserver-client-ca
    spec:
      storageClassName: nas-nfs-workloads
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 1Gi
